[project]
name = "python-ai-ragbot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kushal Soni", email = "kushalsoni.dev@gmail.com"},
]
dependencies = [
    "openai>=1.107.3",
    "langchain>=0.3.27",
    "faiss-cpu>=1.11.0.post1",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "beautifulsoup4>=4.13.5",
    "requests>=2.32.5",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "uvicorn[standard]>=0.35.0"
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"